Fix rotation landscape on smaller screen devices

--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ img {
   height: 100%;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+@media screen and (orientation: landscape) {
   html {
     transform: rotate(-90deg);
     transform-origin: left top;
